@@ -1,4 +1,8 @@
-﻿drkns 18.03.2015 08:18:21 +0200 - build 4311
+﻿drkns 18.03.2015 08:59:33 +0200 - build 4312
+
+1. В некоторых случаях не инициализировались объекты синхронизации.
+
+drkns 18.03.2015 08:18:21 +0200 - build 4311
 
 1. Уточнение 4309.
 
